# axum-diesel-async-graphql-template

./: .env  Cargo.toml  DockerfileApp  LICENSE  README.md  docker-compose.yaml
.cargo/: config.toml
migrations/2024-01-16-150534_init/: up.sql
src/: config.rs  main.rs  schema.rs
src/api/: api_handler.rs  auth_middleware.rs  error.rs  login_handler.rs  mod.rs
src/db/: error.rs  mod.rs  model_manager.rs
src/db/store/: error.rs  mod.rs
src/domain/user/: db_model.rs  mod.rs
src/graphql/: error.rs  handler.rs  mod.rs  schema.rs
src/web/: cookie.rs  error.rs  mod.rs
src/web/crypt/: base64.rs  error.rs  mod.rs  pass.rs  token.rs
src/web/ctx/: mod.rs
